--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -159,8 +159,8 @@ p img {
 
 pre, code {
   width: 100%;
-  color: #222;
-  background-color: #fff;
+  color: white;
+  background-color: #29606F;
 
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 14px;
